# scanner_clipper

./: .gitignore  PhotoUtils-Linux.spec  README.md  desktop_app.py  exif_date_editor.py  gui.py  image_resizer.py  index.html  pyproject.toml  scanner_clipper.py  test_exif_date_editor.py  test_gui.py  test_image_resizer.py  test_scanner_clipper.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
